// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ARTICLECARDS LARGE COMPONENT > renderes correctly 1`] = `
<DocumentFragment>
  <div
    class="md:flex w-full h-full col-span-6 group shadow-sm hover:shadow-2xl dark:shadow-none transition ease-in-out duration-200 rounded-2xl"
  >
    <div
      class="shadow-2xl rounded-2xl transition ease-in-out duration-200 bg-gray-300 dark:bg-neutral-600 text-black dark:text-white w-full h-full z-20 dark:shadow-neutral-800"
    >
      <div
        class="flex flex-col md:flex-row"
      >
        <div
          class="relative rounded-t-2xl md:rounded-l-2xl md:rounded-tr-none md:w-1/2 lg:w-2/3 overflow-hidden"
        >
          <a
            href="/articles/articleDir"
          >
            <div
              class="transition ease-in-out duration-200 group-hover:grayscale-0 grayscale-30 filter"
            >
              <img
                alt="alt"
                class="rounded-t-2xl w-full h-52 md:rounded-l-2xl md:rounded-tr-none md:h-80 group-hover:scale-110 transform-gpu transition ease-in-out duration-200 cursor-pointer"
                data-nimg="1"
                decoding="async"
                height="300"
                loading="lazy"
                sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
                src="/_next/image?url=%2Fimages%2Fog.jpg&w=3840&q=75"
                srcset="/_next/image?url=%2Fimages%2Fog.jpg&w=256&q=75 256w, /_next/image?url=%2Fimages%2Fog.jpg&w=384&q=75 384w, /_next/image?url=%2Fimages%2Fog.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Fog.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Fog.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Fog.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Fog.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Fog.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Fog.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Fog.jpg&w=3840&q=75 3840w"
                style="color: transparent; width: 100%; height: 400px; object-fit: cover; background-size: cover; background-position: 50% 50%; background-repeat: no-repeat;"
                width="600"
              />
            </div>
          </a>
          <div
            class="absolute p-4 bottom-0 md:right-0 md:top-0 md:p-4 md:bottom-0"
          >
            <div
              class="undefined _tagSet_f783ef"
            >
              <a
                href="/tags/tag1"
              >
                <div
                  class="_tag_f783ef _tag-common_f783ef"
                >
                  tag1
                </div>
              </a>
            </div>
          </div>
        </div>
        <div
          class="p-4 lg:w-1/3 relative"
        >
          <a
            href="/articles/articleDir"
          >
            <h2
              class="_heading_7ed776 text-2xl"
            >
              title
            </h2>
          </a>
          <p
            class="mt-2 mb-10"
          >
            the blurb
          </p>
          <div
            class="text-right absolute bottom-0 right-0 p-6"
          >
            <sub>
              1 min read
            </sub>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ARTICLECARDS MEDIUM COMPONENT > renderes correctly 1`] = `
<DocumentFragment>
  <div
    class="md:col-span-3 col-span-6 w-full h-full group"
  >
    <div
      class="shadow-2xl rounded-2xl transition ease-in-out duration-200 bg-gray-300 dark:bg-neutral-600 text-black dark:text-white w-full h-full z-20 dark:shadow-neutral-800"
    >
      <div
        class="flex flex-col relative h-full"
      >
        <div
          class="bg-black rounded-t-2xl relative overflow-hidden"
        >
          <div
            class="transition ease-in-out duration-200 group-hover:grayscale-0 grayscale-30 filter"
          >
            <img
              alt="alt"
              class="rounded-t-2xl group-hover:scale-110 transform-gpu transition ease-in-out duration-200 cursor-pointer"
              data-nimg="1"
              decoding="async"
              height="300"
              loading="lazy"
              sizes="100vw"
              src="/_next/image?url=%2Fimages%2Fog.jpg&w=3840&q=75"
              srcset="/_next/image?url=%2Fimages%2Fog.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Fog.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Fog.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Fog.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Fog.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Fog.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Fog.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Fog.jpg&w=3840&q=75 3840w"
              style="color: transparent; width: 100%; height: 300px; object-fit: cover; background-size: cover; background-position: 50% 50%; background-repeat: no-repeat;"
              width="600"
            />
          </div>
          <div
            class="absolute p-4 bottom-0"
          >
            <div
              class="undefined _tagSet_f783ef"
            >
              <a
                href="/tags/tag1"
              >
                <div
                  class="_tag_f783ef _tag-common_f783ef"
                >
                  tag1
                </div>
              </a>
            </div>
          </div>
        </div>
        <div
          class="p-4"
        >
          <a
            href="/articles/articleDir"
          >
            <h2
              class="_heading_7ed776 text-2xl"
            >
              title
            </h2>
          </a>
          <p
            class="mb-8 mt-2"
          >
            the blurb
          </p>
          <div
            class="text-right absolute bottom-0 right-0 p-4"
          >
            <sub>
              1 min read
            </sub>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ARTICLECARDS SMALL COMPONENT > renderes correctly 1`] = `
<DocumentFragment>
  <div
    class="md:col-span-3 lg:col-span-2 w-full h-full col-span-6 group"
  >
    <div
      class="shadow-2xl rounded-2xl transition ease-in-out duration-200 bg-gray-300 dark:bg-neutral-600 text-black dark:text-white w-full h-full z-20 dark:shadow-neutral-800"
    >
      <div
        class="flex flex-col h-full"
      >
        <div
          class="relative bg-black rounded-t-2xl overflow-hidden"
        >
          <div
            class="transition ease-in-out duration-200 group-hover:grayscale-0 grayscale-30 filter"
          >
            <img
              alt="alt"
              class="rounded-t-2xl group-hover:scale-110 transform-gpu transition ease-in-out duration-200 cursor-pointer"
              data-nimg="1"
              decoding="async"
              height="300"
              loading="lazy"
              sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
              src="/_next/image?url=%2Fimages%2Fog.jpg&w=3840&q=75"
              srcset="/_next/image?url=%2Fimages%2Fog.jpg&w=256&q=75 256w, /_next/image?url=%2Fimages%2Fog.jpg&w=384&q=75 384w, /_next/image?url=%2Fimages%2Fog.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Fog.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Fog.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Fog.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Fog.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Fog.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Fog.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Fog.jpg&w=3840&q=75 3840w"
              style="color: transparent; height: 300px; width: 100%; object-fit: cover; background-size: cover; background-position: 50% 50%; background-repeat: no-repeat;"
              width="600"
            />
          </div>
          <div
            class="absolute p-4 bottom-0"
          >
            <div
              class="undefined _tagSet_f783ef"
            >
              <a
                href="/tags/tag1"
              >
                <div
                  class="_tag_f783ef _tag-common_f783ef"
                >
                  tag1
                </div>
              </a>
            </div>
          </div>
        </div>
        <div
          class="p-4 relative flex-grow"
        >
          <a
            href="/articles/articleDir"
          >
            <h2
              class="_heading_7ed776 text-2xl"
            >
              title
            </h2>
          </a>
          <p
            class="mt-2 mb-10"
          >
            the blurb
          </p>
          <div
            class="text-right absolute bottom-0 right-0 p-6"
          >
            <sub>
              1 min read
            </sub>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
